hotfix: spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@
   }
 
   section {
-    @apply mb-24;
+    @apply mb-16;
   }
 }
 
